# ai-alpha-squad

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  skills-lock.json
.agents/: README.md  agent-architect.md  agent-business-owner.md  agent-developer.md  agent-devops.md  agent-qa.md  agent-release-manager.md  agent-runtime-strategy.md  agent-security.md  agent-tech-writer.md  copilot-issue-first-delivery.md  definition-of-done.md  infrastructure-prerequisites.md  issue-lifecycle.md  project-specification.md  skills-install.sh  squad-config.example.yaml  squad-orchestrator.md  whatsapp-director-channel.md
.github/: SECRETS_AND_VARIABLES.md  labels-setup.sh  pull_request_template.md
docs/: agent-ai-providers.md  branch-protection.md  copilot-workflow-approval.md  director-dashboard.md  director-gate.md  director-project-board.md  gap-comparison.md  issue-1-changelog.md  issue-1-qa-report.md  issue-1-release-notes.md  issue-1-security-report.md  issue-1-seeker-readme-patch.md  issue-1-technical-spec-and-sub-issues.md  squad-domain-registration.md  squad-orchestrator-automation.md  squad-v2-minimal.md  whatsapp-lifecycle-notify.md  whatsapp-setup.md  whatsapp-webhook-hostname.md
scripts/: cf-domain-check.sh  cf-domain-register.sh  check-whatsapp-webhook-url.sh  close-copilot-planning-pr.sh  deploy-landing.sh  deploy-whatsapp-webhook.sh  director-approve.sh  director-gate-is-authorized.sh  director-gate.sh  embed-flow-diagram.py  format-squad-comment.py  generate-sitemap.py  install-target-repo-orchestrator-hook.sh  notify-director-lifecycle.sh  (+47 more)
(+239 files in other folders)
