[project]
name = "ai-alpha-squad"
version = "0.1.0"
description = "Runtime helpers for AI Alpha Squad (WhatsApp Director channel, etc.)"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
